@@ -19,30 +19,27 @@
 
 package org.georchestra.console.integration;
 
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
-import javax.mail.MessagingException;
+import jakarta.mail.MessagingException;
 
 import org.apache.commons.io.FileUtils;
 import org.georchestra.commons.configuration.GeorchestraConfiguration;
 import org.georchestra.console.mailservice.EmailFactory;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import org.springframework.test.context.web.WebAppConfiguration;
 import org.springframework.web.context.WebApplicationContext;
 
 import com.google.common.io.Files;
 
-@RunWith(SpringRunner.class)
 @WebAppConfiguration
-@ContextConfiguration(locations = { "classpath:/mail-factory-test.xml" })
+@SpringJUnitConfig(locations = {"classpath:/mail-factory-test.xml"})
 public class EmailFactoryIT {
 
     @Autowired
@@ -67,7 +64,7 @@ public class EmailFactoryIT {
 
     private File createGeorchestraDatadir() throws IOException {
         File georDatadir = Files.createTempDir();
-        File consoleDir = Paths.get(georDatadir.getAbsolutePath(), "console", "templates").toFile();
+        File consoleDir = Path.of(georDatadir.getAbsolutePath(), "console", "templates").toFile();
         FileUtils.forceMkdir(consoleDir);
         String path = wac.getServletContext().getRealPath("/WEB-INF/templates");
         FileUtils.copyDirectory(new File(path), consoleDir);
